# kodi4xbox

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
addons/metadata.common.allmusic.com/: addon.xml
addons/metadata.common.musicbrainz.org/: addon.xml
addons/metadata.common.theaudiodb.com/: addon.xml
addons/xbmc.addon/: addon.xml
cmake/: PostbuildAction.cmake
docs/: README.NXDK.md  README.md
docs/resources/: debug-test.patch  debug_kodi.patch
docs/roadmap/: README.md
lib/cximage/: ImageLib.sln  ImageLib.vcproj
lib/libiconv/: CMakeLists.txt
lib/nxio/: .gitignore  CMakeLists.txt  LICENSE  README.md  SConstruct
lib/nxio/include/: errno.h  fcntl.h  io.h  unistd.h
lib/nxio/include/nxio/: errno_win32.h  fd.h  lk.h  log.h
lib/nxio/include/sys/: stat.h  types.h
lib/nxio/src/: fcntl.c  nxoldnames.def
lib/nxio/src/core/: errno.c  errno_win32.c  fd.c
lib/nxio/src/core/io/: int_lseek.c  int_read.c  int_stat.c  int_write.c
lib/nxio/src/io/: access.c  close.c  dup.c  lseek.c  open.c  read.c  stat.c  unlink.c  write.c
lib/nxio/src/util/: log.c
lib/nxio/test/: .gitignore  Makefile
lib/nxio/test/include/: test.h
lib/nxio/test/src/: main.c  test.c
lib/sqlite/: CMakeLists.txt  lockfile.cpp  lockfile.h  os_win.c  os_win.h  pager.h  shell.c  sqlite_win32.c  where.c
system/: addon-manifest.xml
system/settings/: settings.xml
xbmc/: CompileInfo.cpp  ContextMenuManager.cpp  ContextMenuManager.h  DatabaseManager.cpp  DynamicDll.cpp  DynamicDll.h  FileItem.cpp  FileItem.h  GUIInfoManager.cpp  GUIInfoManager.h  LangInfo.cpp  PlayListPlayer.cpp  SectionLoader.cpp  SectionLoader.h  SeekHandler.cpp  ServiceBroker.cpp  ServiceBroker.h  ServiceManager.cpp  ServiceManager.h  SystemGlobals.cpp  TextureCacheJob.cpp  TextureCacheJob.h  URL.cpp  Util.cpp  Util.h  system.h  system_gl.h  unimplemented.cpp  unimplemented.h
xbmc/addons/: AddonBuilder.cpp  AddonInstaller.cpp  AddonManager.cpp  ImageResource.cpp  Repository.cpp  RepositoryUpdater.cpp
xbmc/application/: AppEnvironment.cpp  AppParamParser.cpp  AppParamParser.h  Application.cpp  Application.h  ApplicationPlayer.cpp  ApplicationPlayerCallback.cpp  ApplicationPowerHandling.cpp  ApplicationPowerHandling.h  ApplicationSkinHandling.cpp  ApplicationStackHelper.cpp  ApplicationVolumeHandling.cpp
xbmc/commons/: ilog.h
xbmc/cores/: DummyVideoPlayer.cpp  VideoSettings.h
xbmc/dbwrappers/: Database.cpp  sqlitedataset.cpp
xbmc/dialogs/: GUIDialogFileBrowser.cpp  GUIDialogKaiToast.cpp  GUIDialogKeyboardGeneric.cpp  GUIDialogKeyboardGeneric.h  GUIDialogMediaFilter.cpp  GUIDialogMediaSource.cpp  GUIDialogProgress.cpp  GUIDialogProgress.h  GUIDialogSelect.cpp  GUIDialogTextViewer.cpp  GUIDialogVolumeBar.cpp
xbmc/favourites/: FavouritesService.cpp  GUIWindowFavourites.cpp
xbmc/filesystem/: AddonsDirectory.cpp  CacheStrategy.cpp  CurlFile.cpp  DirectoryFactory.cpp  DllLibCurl.cpp  DllLibCurl.h  FileCache.cpp  FileDirectoryFactory.cpp  FileFactory.cpp  SpecialProtocol.cpp  SpecialProtocol.h  StackDirectory.cpp  StackDirectory.h  ZipDirectory.cpp  ZipFile.cpp  ZipFile.h  ZipManager.cpp
xbmc/guilib/: GUIAction.cpp  GUIAudioManager.cpp  GUIAudioManager.h  GUIBaseContainer.cpp  GUIButtonControl.cpp  GUIColorButtonControl.cpp  GUIColorManager.cpp  GUIComponent.cpp  GUIComponent.h  GUIControl.cpp  GUIControlFactory.cpp  GUIControlGroup.cpp  GUIControlGroupList.cpp  GUIDialog.cpp  GUIEditControl.cpp  GUIFadeLabelControl.cpp  GUIFont.cpp  GUIFont.h  GUIFontCache.cpp  GUIFontCache.h  GUIFontManager.cpp  GUIFontManager.h  GUIFontTTF.cpp  GUIFontTTF.h  GUIFontTTFGL.cpp  GUIFontTTFGL.h  GUIFontTTFXbox.cpp  GUIFontTTFXbox.h  GUIImage.cpp  GUIIncludes.cpp  GUIKeyboardFactory.cpp  GUIListContainer.cpp  GUIListGroup.cpp  GUIMessage.h  GUIMoverControl.cpp  GUIPanelContainer.cpp  GUIResizeControl.cpp  GUIScrollBarControl.cpp  GUISettingsSliderControl.cpp  GUISliderControl.cpp  (+29 more)
xbmc/imagefiles/: SpecialImageLoaderFactory.cpp
xbmc/input/: InputCodingTableBasePY.cpp  InputManager.cpp  InputManager.h  WindowTranslator.cpp
xbmc/interfaces/: AnnouncementManager.cpp
xbmc/listproviders/: DirectoryProvider.cpp  DirectoryProvider.h  IListProvider.cpp  IListProvider.h  MultiProvider.cpp  MultiProvider.h  StaticProvider.cpp  StaticProvider.h
xbmc/music/: MusicDatabase.cpp
xbmc/network/: DNSNameCache.cpp  Network.cpp  NetworkServices.cpp  NetworkServices.h
xbmc/peripherals/: Peripherals.cpp  Peripherals.h  SDLJoystick.cpp  SDLJoystick.h
xbmc/pictures/: DllImageLib.h  ExifParse.cpp  GUIWindowPictures.cpp  GUIWindowSlideShow.cpp  JpegParse.cpp  Picture.cpp  Picture.h  PictureInfoTag.cpp  SlideShowPicture.cpp  SlideShowPictureGL.cpp  libexif.cpp
xbmc/powermanagement/: PowerManager.cpp  PowerManager.h
xbmc/profiles/: ProfileManager.cpp  ProfileManager.h
xbmc/rendering/: MatrixGL.cpp  RenderSystem.cpp  RenderSystem.h  RenderSystemTypes.h
xbmc/settings/: AdvancedSettings.cpp  AdvancedSettings.h  DisplaySettings.cpp  DisplaySettings.h  MediaSettings.cpp  MediaSettings.h  MediaSourceSettings.cpp  SettingConditions.cpp  Settings.cpp  SettingsComponent.cpp  SettingsComponent.h
xbmc/storage/: MediaManager.cpp
xbmc/threads/: Condition.h  CriticalSection.h  Event.cpp  Event.h  Helpers.h  SharedSection.h
xbmc/utils/: AlarmClock.cpp  CharsetConverter.cpp  ColorUtils.h  ComponentContainer.h  Digest.cpp  Digest.h  DiscsUtils.cpp  EndianSwap.h  FileExtensionProvider.cpp  GLUtils.cpp  GpuInfo.cpp  SaveFileStateJob.cpp  Splash.cpp  StringUtils.cpp  StringUtils.h  SystemInfo.cpp  TimeUtils.cpp  URIUtils.cpp  XTimeUtils.h  log.cpp  params_check_macros.h
xbmc/video/: ContextMenus.cpp  PlayerController.cpp  VideoInfoScanner.cpp  VideoThumbLoader.cpp  VideoUtils.cpp
xbmc/view/: GUIViewState.cpp  ViewStateSettings.cpp  ViewStateSettings.h
xbmc/weather/: WeatherJob.cpp
xbmc/windowing/: GraphicContext.cpp  GraphicContext.h  Resolution.cpp  Resolution.h  WinSystem.cpp  WinSystem.h  WindowingFactory.h
xbmc/windows/: GUIMediaWindow.cpp  GUIMediaWindow.h  GUIWindowDebugInfo.cpp  GUIWindowFileManager.cpp  (+3 more)
(+155 files in other folders)
