cmake_minimum_required(VERSION 3.18)
project(sqlite LANGUAGES C)

add_library(sqlite sqlite3.c sqlite_win32.c)

add_definitions(
	-DSQLITE_THREADSAFE=1
  -DSQLITE_OMIT_DATETIME_FUNCS=1
  -DSQLITE_OMIT_AUTHORIZATION=1
  -DSQLITE_OMIT_AUTOVACUUM=1
  -DSQLITE_OMIT_MEMORYDB=1
  -DSQLITE_OMIT_INTEGRITY_CHECK=1
  -DSQLITE_OMIT_UTF16=1
  -DSQLITE_OMIT_EXPLAIN=1
  -DSQLITE_OMIT_TRACE=1
	-DSQLITE_WITHOUT_MSIZE=1
  -DSQLITE_DEFAULT_MEMSTATUS=0
  -DSQLITE_OMIT_DEPRECATED=1
  -DSQLITE_OMIT_PROGRESS_CALLBACK=1
  -DSQLITE_OMIT_SHARED_CACHE=1
  -DSQLITE_DISABLE_INTRINSIC=1
  -DSQLITE_OMIT_SEH=1
	-DSQLITE_OS_OTHER=1
)

target_include_directories(sqlite PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
